--- a/game.html
+++ b/game.html
@@ -3,17 +3,46 @@
 
     <head>
         <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
-        <script defer src="js/Stairs.js"></script>
-        <script defer src="js/characterModel.js"></script>
+        <script defer scr="js/Pavilion.js"></script>
+        <!-- <script defer src="js/Stairs.js"></script> -->
+        <!-- <script defer src="js/characterModel.js"></script> -->
         <script defer src="js/marketView.js"></script>
-        <script defer src="js/marketController.js"></script>
+        <!-- <script defer src="js/marketController.js"></script> -->
     </head>
 
     <body>
-        <div class="mainScene">
-            <div class="clitker character">
+        <button class="switch-button">Switch the floor</button>
+        <div class="floor first-floor">
+            <div class="row">
+                <div class="shop clothes writing" style="border-bottom: none;">Clothes.</br>Here you can buy any stylish staff you need.</div>
+                <div class="shop sport writing mt-20" style="border-right: none;">Sport.</br>Basketball, Volleyball, Football - nevermind. We hate everything! Let's just get drunk together!</div>
+            </div>
+            <div class="row">
+                <div class="shop macdonalds writing ml-20" style="border-bottom: none;">Macdonalds</br>We hate chickens. That's why we cook them for you. Bless you before the big lunch!</div>
+                <div class="shop cafe writing ml-20" style="margin-top: 120px; border-top: none;">Cafe.</br>We are in the front of MacDac. You'll not come here :(</div>
+            </div>
+            <div class="row">
+                <div class="shop burger-king writing ml-20" style="border-left: none;">Burger King.</br>English, friend.</br>Do you speak it?</br>I dare, I double dare you!</div>
+                <div class="shop clothes writing" style="float: right; margin-top: 120px; border-top: none;">Clothes.</br>Here you can buy any stylish staff you need.</div>
             </div>
         </div>
+
+        <div class="floor second-floor" style="display: none;">
+            <div class="row">
+                <div class="shop clothes writing" style="border-right: none;">Clothes.</br>Here you can buy any stylish staff you need.</div>
+                <div class="shop sport writing mt-20" style="border-top: none;">Sport.</br>Basketball, Volleyball, Football - nevermind. We hate everything! Let's just get drunk together!</div>
+            </div>
+            <div class="row">
+                <div class="shop cafe writing ml-20" style="border-bottom: none;">Cafe.</br>We are in the front of KFC. You'll not come here :(</div>
+                <div class="shop macdonalds writing ml-20" style="margin-top: 120px; border-top: none; border-right: none;">Macdonalds</br>We hate chickens. That's why we cook them for you. Bless you before the big lunch!</div>
+            </div>
+            <div class="row">
+                <div class="shop clothes writing"  style="margin-left: 120px; border-left: none;">Clothes.</br>Here you can buy any stylish staff you need.</div>
+                <div class="shop kfc writing ml-20" style="margin-top: 120px; border-top: none; border-left: none;">KFC.</br>Sanders already here! Get prepared for our uber-mega-spicy fresh meet!</div>
+            
+            </div>
+        </div>
+        
     </body>
 
 </html>
