--- a/game.html
+++ b/game.html
@@ -3,15 +3,17 @@
 
     <head>
         <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+        <script defer src="js/Pavilion.js"></script>
         <script defer src="js/PavilionModel.js"></script>
+        <script defer src="js/marketController.js"></script>
         <script defer src="js/marketView.js"></script>
     </head>
 
     <body>
         <div class="floor-table">Floor 1</div>
         
-        <div class="floor first-floor">
-            <div class="row">
+        <div class="floor first-floor"></div>
+            <!-- <div class="row">
                 <div class="shop clothes writing" style="border-bottom: none;">Clothes.</br>Here you can buy any stylish staff you need.</div>
                 <div class="shop sport writing mt-20" style="border-right: none;">Sport.</br>Basketball, Volleyball, Football - nevermind. We hate everything! Let's just get drunk together!</div>
             </div>
@@ -23,10 +25,10 @@
                 <div class="shop burger-king writing ml-20" style="border-left: none;">Burger King.</br>English, friend.</br>Do you speak it?</br>I dare, I double dare you!</div>
                 <div class="shop clothes writing" style="float: right; margin-top: 120px; border-top: none;">Clothes.</br>Here you can buy any stylish staff you need.</div>
             </div>
-        </div>
+        </div> -->
 
-        <div class="floor second-floor" style="display: none;">
-            <div class="row">
+        <div class="floor second-floor" style="display: none;"></div>
+            <!-- <div class="row">
                 <div class="shop clothes writing" style="border-right: none;">Clothes.</br>Here you can buy any stylish staff you need.</div>
                 <div class="shop sport writing mt-20" style="border-top: none;">Sport.</br>Basketball, Volleyball, Football - nevermind. We hate everything! Let's just get drunk together!</div>
             </div>
@@ -39,7 +41,7 @@
                 <div class="shop kfc writing ml-20" style="margin-top: 120px; border-top: none; border-left: none;">KFC.</br>Sanders already here! Get prepared for our uber-mega-spicy fresh chicken-meet!</div>
             
             </div>
-        </div>
+        </div> -->
         <button class="switch-button">Switch the floor</button>
     </body>
 
