changed to canvas

--- a/game.html
+++ b/game.html
@@ -11,8 +11,9 @@
 
     <body>
         <div class="floor-table">Floor 1</div>
-        <div class="floor first-floor"></div>
-        <div class="floor second-floor" style="display: none;"></div>
+        <div>
+            <canvas id="floor-canvas" width="850px" height="570px"></canvas>
+        </div>
         <button class="switch-button">Switch the floor</button>
     </body>
 
